chore: pkg config

--- a/package.json
+++ b/package.json
@@ -65,5 +65,8 @@
   },
   "lint-staged": {
     "*": "eslint --fix"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   }
 }
