--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.0",
   "packageManager": "pnpm@8.6.0",
-  "description": "",
+  "description": "Search text content in multi files.",
   "author": "Kricsleo <kricsleo@163.com>",
   "license": "MIT",
   "homepage": "https://github.com/kricsleo/file-text-search#readme",
@@ -12,13 +12,18 @@
     "url": "git+https://github.com/kricsleo/file-text-search.git"
   },
   "bugs": "https://github.com/kricsleo/file-text-search/issues",
-  "keywords": [],
+  "keywords": ["search", "text", "glob"],
   "sideEffects": false,
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
       "require": "./dist/index.cjs",
       "import": "./dist/index.mjs"
+    },
+    "./types": {
+      "types": "./dist/types.d.ts",
+      "require": "./dist/types.cjs",
+      "import": "./dist/types.mjs"
     }
   },
   "main": "./dist/index.mjs",
@@ -38,33 +43,20 @@
   "scripts": {
     "build": "unbuild",
     "dev": "unbuild --stub",
-    "lint": "eslint .",
     "prepublishOnly": "nr build",
     "release": "bumpp && npm publish",
     "start": "esno src/index.ts",
-    "test": "vitest",
-    "typecheck": "tsc --noEmit"
+    "test": "vitest"
   },
   "devDependencies": {
     "@antfu/ni": "^0.21.3",
     "@types/node": "^18.16.16",
     "bumpp": "^9.1.0",
-    "eslint": "^8.41.0",
     "esno": "^0.16.3",
-    "lint-staged": "^13.2.2",
     "pnpm": "^8.6.0",
-    "rimraf": "^5.0.1",
-    "simple-git-hooks": "^2.8.1",
     "typescript": "^5.0.4",
     "unbuild": "^1.2.1",
-    "vite": "^4.3.9",
     "vitest": "^0.31.3"
-  },
-  "simple-git-hooks": {
-    "pre-commit": "pnpm lint-staged"
-  },
-  "lint-staged": {
-    "*": "eslint --fix"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
