--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "file-text-search",
   "type": "module",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "packageManager": "pnpm@8.6.0",
   "description": "Search text content in multi files.",
   "author": "Kricsleo <kricsleo@163.com>",
@@ -12,7 +12,11 @@
     "url": "git+https://github.com/kricsleo/file-text-search.git"
   },
   "bugs": "https://github.com/kricsleo/file-text-search/issues",
-  "keywords": ["search", "text", "glob"],
+  "keywords": [
+    "search",
+    "text",
+    "glob"
+  ],
   "sideEffects": false,
   "exports": {
     ".": {
