--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
       "import": "./dist/worker.mjs"
     },
     "./types": {
-      "types": "./dist/types.d.ts",
-      "import": "./dist/types.mjs"
+      "types": "./dist/types.d.ts"
     }
   },
   "main": "./dist/index.mjs",
